# muse-trader

./: CMakeLists.txt  README.md  readme.txt
src/: CMakeLists.txt  btc_velocity.cpp  main.cpp  muse_brainflow_streamer.cpp
web/: index.html  script.js  styles.css
